--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/src/css/main.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/src/css/portfolio.css" />
   </head>
   <body>
     <header class="header">
@@ -25,10 +26,12 @@
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="index.html" class="nav__link">Студія</a>
+              <a href="/index.html" class="nav__link">Студія</a>
             </li>
             <li class="nav__item">
-              <a href="portfolio.html" class="nav__link">Портфоліо</a>
+              <a href="/src/pages/portfolio.html" class="nav__link"
+                >Портфоліо</a
+              >
             </li>
             <li class="nav__item">
               <a href="#" class="nav__link">Контакти</a>
